COLLADA_ModelTest loads a "milan" building